--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "generate": "npx drizzle-kit generate",
+    "generate": "npx drizzle-kit generate --config=drizzle.config.ts",
     "push": "drizzle-kit push",
     "migrate":"npx drizzle-kit migrate",
     "studio": "npx drizzle-kit studio"
