--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "generate": "npx drizzle-kit generate --config=drizzle.config.ts",
     "push": "drizzle-kit push",
-    "migrate":"npx drizzle-kit migrate",
+    "migrate": "npx drizzle-kit migrate",
     "studio": "npx drizzle-kit studio"
   },
   "keywords": [],
@@ -16,11 +16,13 @@
   "description": "",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/pg": "^8.11.6",
     "drizzle-kit": "^0.21.4",
     "drizzle-orm": "^0.30.10",
     "express": "^4.19.2",
     "mysql2": "^3.9.7",
     "nodemon": "^3.1.0",
+    "pg": "^8.11.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
