--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mysql2": "^3.9.7",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
+    "stytch": "^10.16.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
